Some fixes to make "Edit Media" work again.

--- a/templates/editcontent/media_edit.html.twig
+++ b/templates/editcontent/media_edit.html.twig
@@ -1,44 +1,22 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 
+{% set thumbnail = thumbnail(image = media.filename, width = 900, height = 500, area = media.area, path = media.path) %}
+
 {% block title %}
     {{ 'caption.edit'|trans }} » <strong>{{ media.title|default('New')|excerpt(30) }}</strong>
 {% endblock %}
+
+{% block vue_id 'editor' %}
 
 {% block main %}
 
     <h2>{{ 'caption.filename'|trans }} » <strong>{{ media.area }}://{% if media.path %}{{ media.path }}/{% endif %}{{ media.filename }}</strong></h2>
 
     <div class="imageholder">
-        {% set thumbnail = thumbnail(image = media.filename, width = 900, height = 500, area = media.area, path = media.path) %}
         <img id="main_image" src="{{ thumbnail }}">
     </div>
 
-    <script>
-        var img = document.createElement('img');
-        img.setAttribute('src', '{{ thumbnail|raw }}');
-
-        img.addEventListener('load', function() {
-            var vibrant = new Vibrant(img);
-            var swatches = vibrant.swatches();
-            for (var swatch in swatches) {
-                if (swatches.hasOwnProperty(swatch) && swatches[swatch]) {
-                    var elem = document.createElement('li');
-                    var label = document.createElement('div');
-                    var labelNode = document.createTextNode(swatches[swatch].getHex());
-                    var referenceNode = document.getElementById('swatcheslist');
-                    label.className = "ui horizontal label";
-                    label.setAttribute('style', 'background-color: ' + swatches[swatch].getHex());
-                    elem.appendChild(label).appendChild(labelNode);
-                    elem.appendChild(document.createTextNode(swatch));
-                    referenceNode.append(elem);
-                }
-            }
-        });
-
-    </script>
-
     <br>
-
 
 <form method="post" id="editcontent">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('media_edit') }}">
@@ -69,10 +47,12 @@
     }  %}
 
 
-    <input type="submit" class="btn btn-primary" value="Save">
+    <button type="submit" class="btn btn-success mb-3" form="editcontent">
+        <i class="fas fa-save mr-2"></i>
+        {{ 'action.save'|trans }}
+    </button>
 
 </form>
-
 
 {% endblock %}
 
@@ -84,9 +64,10 @@
 
         <form>
             <div class="form-group">
-            <button type="submit" class="btn btn-success mb-3" form="editcontent">
-                <i class="fas fa-save mr-2"></i> {{ 'action.save'|trans }}
-            </button>
+                <button type="submit" class="btn btn-success mb-3" form="editcontent">
+                    <i class="fas fa-save mr-2"></i>
+                    {{ 'action.save'|trans }}
+                </button>
 
             <ul class="ui divided selection list" id="swatcheslist">
             </ul>
@@ -97,45 +78,54 @@
                 'label': 'field.id'|trans,
                 'name': 'id',
                 'value': media.id,
-                'attributes': 'readonly form="editcontent"',
+                'disabled' : true,
+                'form' : 'editcontent'
             }  %}
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
                 'label': 'field.width'|trans,
                 'name': 'width',
                 'value': media.width,
-                'attributes': 'readonly form="editcontent"',
+                'disabled' : true,
+                'form' : 'editcontent'
             }  %}
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
                 'label': 'field.height'|trans,
                 'name': 'height',
                 'value': media.height,
-                'attributes': 'readonly form="editcontent"',
+                'disabled' : true,
+                'form' : 'editcontent'
             }  %}
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
                 'label': 'field.filesize'|trans,
                 'name': 'filesize',
                 'value': media.filesize,
-                'attributes': 'readonly form="editcontent"',
+                'disabled' : true,
+                'form' : 'editcontent'
             }  %}
 
             {#<input type="text" name="author" value="{{ media.author }}">#}
 
-    {% include '@bolt/_partials/fields/datetime.html.twig' with {
-        'label': 'field.createdAt'|trans,
-        'name': 'createdAt',
-        'value': media.createdAt,
-        'attributes': 'readonly form="editcontent"',
-    } %}
+            {% include '@bolt/_partials/fields/date.html.twig' with {
+                'label': 'field.createdAt'|trans,
+                'name': 'createdAt',
+                'value': media.createdAt,
+                'disabled' : true,
+                'mode' : 'datetime',
+                'form' : 'editcontent'
+            } %}
 
-    {% include '@bolt/_partials/fields/datetime.html.twig' with {
-        'label': 'field.modifiedAt'|trans,
-        'name': 'modifiedAt',
-        'value': media.modifiedAt,
-        'attributes': 'readonly form="editcontent"',
-    } %}
+            {% include '@bolt/_partials/fields/date.html.twig' with {
+                'label': 'field.modifiedAt'|trans,
+                'name': 'modifiedAt',
+                'value': media.modifiedAt,
+                'disabled' : true,
+                'mode' : 'datetime',
+                'form' : 'editcontent'
+            } %}
+
 
         </form>
 
@@ -149,4 +139,28 @@
     {{ parent() }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vibrant.js/1.0.0/Vibrant.min.js"></script>
 
+
+    <script>
+        var img = document.createElement('img');
+        img.setAttribute('src', '{{ thumbnail|raw }}');
+
+        img.addEventListener('load', function() {
+            var vibrant = new Vibrant(img);
+            var swatches = vibrant.swatches();
+            for (var swatch in swatches) {
+                if (swatches.hasOwnProperty(swatch) && swatches[swatch]) {
+                    var elem = document.createElement('li');
+                    var label = document.createElement('div');
+                    var labelNode = document.createTextNode(swatches[swatch].getHex());
+                    var referenceNode = document.getElementById('swatcheslist');
+                    label.className = "ui horizontal label";
+                    label.setAttribute('style', 'background-color: ' + swatches[swatch].getHex());
+                    elem.appendChild(label).appendChild(labelNode);
+                    elem.appendChild(document.createTextNode(swatch));
+                    referenceNode.append(elem);
+                }
+            }
+        });
+
+    </script>
 {% endblock javascripts %}
