added quick fix in for mutlselect

--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -19,7 +19,13 @@
 
 {% block field %}
     {% if multiple %}
-        Multi
+        <editor-multiselect
+            :value="'{{ value }}'"
+            :name="'{{ name }}'"
+            :id="'{{ id }}'"
+            :options="{{ options|json_encode() }}"
+            :form="'{{ form }}'"
+        ></editor-multiselect>
     {% else %}
         <editor-select
 
