Minor tweaks. YOLO-push

--- a/assets/scss/init/_base.scss
+++ b/assets/scss/init/_base.scss
@@ -21,8 +21,8 @@ strong {
 
 .card{
   box-shadow: $card-box-shadow;
+  background: #FFF;
   .card-header{
-    background: transparent;
     font-weight: $font-weight-bold;
   }
 }
