--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="{% block html_id %}{% endblock %}">
 
 <head>
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
     {% endblock %}
 </head>
 
-<body>
+<body id="{% block body_id %}{% endblock %}">
 
 <div class="admin has-{{ block('container') }}">
 
