--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,32 +4,7 @@
     {{ 'title.login'|trans }}
 {% endblock %}
 
-{% block body_id 'login' %}
-
-{% block stylesheets %}
-    {{ parent() }}
-
-    <style type="text/css">
-        html {
-            background: linear-gradient( rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.4) ), url(https://source.unsplash.com/daily);
-            background-position: center;
-            background-size: cover;
-        }
-
-        body {
-            background: transparent;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .card {
-            width: 22rem;
-            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
-        }
-
-    </style>
-{% endblock %}
+{% block html_id 'login' %}
 
 {% block javascripts %}
     {{ parent() }}
@@ -39,7 +14,6 @@
 <div class="card">
 
     <div class="card-header">
-
         <i class="fa fa-lock" aria-hidden="true"></i>
         Bolt &raquo; Login
     </div>
