--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -67,6 +67,7 @@
                 <select id="user_backendTheme" name="user[backendTheme]" class="form-control">
                     <option value="default" selected="selected">The Default theme</option>
                     <option value="dark">The Default Dark theme</option>
+                    <option value="light">A pretty Light theme</option>
                     <option value="woordpers">WoordPers: Kinda looks like that other CMS</option>
                 </select>
             </div>
