--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -4,7 +4,13 @@
   <i class='fas mr-2 fa-tachometer-alt'></i><strong>{{ 'caption.dashboard'|trans }}</strong>
 {% endblock title %}
 
+
+
 {% block main %}
+    {{ dump(records) }}
+
+<textarea syle="width: 1000px">{{ jsonrecords(records, true) }}</textarea>
+
   <div id="listing">
     {% include '@bolt/_partials/_content_listing.html.twig' with {'records': records, 'type': 'dashboard' } %}
   </div>
