--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -18,6 +18,12 @@
 
 {% block topsection %}
 
+    {{ dump(record.taxonomies) }}
+
+
+    {{ dump(record.taxonomies|first) }}
+    {{ dump(record.taxonomies) }}
+
 {% endblock %}
 
 {% block main %}
