Working on select fields persisting properly

--- a/templates/_macro/_macro.html.twig
+++ b/templates/_macro/_macro.html.twig
@@ -7,7 +7,7 @@
     {% set type = type|default('submit') %}
     {% set form = form|default('') %}
 
-    <button type="{{ type }}" class="btn btn-{{ class }} mb-3" form="{{ form }}">
+    <button type="{{ type }}" class="btn btn-{{ class }} mb-3" {% if form %}form="{{ form }}"{% endif %}>
         <i class="fas fa-{{ icon }} mr-2"></i>
         {{- label -}}
     </button>
