--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -10,29 +10,22 @@
 {% endif %}
 
 {% if field.definition is defined %}
-    {% set multiple = field.definition.get('multiple')  %}
+    {% set multiple = field.definition.get('multiple') ? 'true' : 'false' %}
 {% else %}
-    {% set multiple = false %}
+    {% set multiple = 'false' %}
 {% endif %}
 
 
 
 {% block field %}
-    {% if multiple %}
-        <editor-multiselect
-            :value="'{{ value }}'"
-            :name="'{{ name }}'"
-            :id="'{{ id }}'"
-            :options="{{ options|json_encode() }}"
-            :form="'{{ form }}'"
-        ></editor-multiselect>
-    {% else %}
         <editor-select
-            :value="'{{ value }}'"
+            :value="'{{ value|json_encode() }}'"
             :name="'{{ name }}'"
             :id="'{{ id }}'"
             :options="{{ options|json_encode() }}"
             :form="'{{ form }}'"
+            :multiple="{{ multiple }}"
         ></editor-select>
-    {% endif %}
+
+    (Current saved value: <code>{{ value|join(', ') }}</code> )
 {% endblock %}
