--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -19,7 +19,8 @@
 
 {% block topsection %}
 
-    {{ dump(record.statusoptions) }}
+    {{ dump(record.selectfield) }}
+    {{ dump(record.multiselect) }}
     {#{{ dump(record.taxonomies) }}#}
 
 
