Working on select fields persisting properly

--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -18,7 +18,8 @@
 
 {% block topsection %}
 
-    {{ dump(record.statusoptions) }}
+    {{ dump(record.selectfield) }}
+    {{ dump(record.multiselect) }}
     {#{{ dump(record.taxonomies) }}#}
 
 
