Fixes error when editing records with `video` field

--- a/templates/_partials/fields/generic.html.twig
+++ b/templates/_partials/fields/generic.html.twig
@@ -1,5 +1,5 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value|join(", ") }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
 {% endblock %}
