--- a/templates/content/_taxonomies.html.twig
+++ b/templates/content/_taxonomies.html.twig
@@ -11,10 +11,10 @@
             {{ definition.name }}
 
             <editor-select
-                    :value={{ ['fun', 'love']|json_encode() }}
+                    :value="'{{ ['fun', 'love']|json_encode() }}'"
                     :name="'taxonomy[{{ definition.slug }}]'"
                     :id="'taxonomy-{{ definition.slug }}'"
-                    :options={{ options|json_encode() }}
+                    :options="'{{ options|json_encode() }}'"
                     :multiple="true"
             ></editor-select>
 
