added multiselect fixes

--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -16,14 +16,12 @@
 {% endif %}
 
 {% block field %}
-        <editor-select
-            :value="'{{ value|json_encode() }}'"
-            :name="'{{ name }}'"
-            :id="'{{ id }}'"
-            :options="'{{ options|json_encode() }}'"
-            :form="'{{ form }}'"
-            :multiple="{{ multiple }}"
-        ></editor-select>
-
-    (Current saved value: <code>{{ value|json_encode() }}</code> )
+    <editor-select
+        :value="'{{ value|json_encode() }}'"
+        :name="'{{ name }}'"
+        :id="'{{ id }}'"
+        :options="{{ options|json_encode() }}"
+        :form="'{{ form }}'"
+        :multiple="{{ multiple }}"
+    ></editor-select>
 {% endblock %}
