--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -1,10 +1,9 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
-
+    {% for image in value %}
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ image }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
+    {% endfor %}
     <mark>Note: This field is practically the same as the <code>filelist</code>-field.</mark>
 
 {% endblock %}
