--- a/public/theme/skeleton/partials/_sub_field_blocks.twig
+++ b/public/theme/skeleton/partials/_sub_field_blocks.twig
@@ -74,7 +74,7 @@
     {# Special case for 'select' fields: if it's a multiple select, the value is an array. #}
     {% if fieldtype == "select" and value is not empty %}
         <p><strong>{{ value.definition.label|default(value.name) }}: </strong>
-        {{ value|join(", ") }}
+            {{ dump(value) }}
         </p>
     {% endif %}
 
