--- a/public/theme/skeleton/partials/_recordfooter.twig
+++ b/public/theme/skeleton/partials/_recordfooter.twig
@@ -1,8 +1,7 @@
 {# This file is inserted as the 'footer' of each listed record. #}
 <p class="meta">
     {% if record.editlink() %}
-        <span class="edit-link"><a href="{{ record.editlink() }}"><strong>{{ __('general.phrase.edit') }}</strong></a></span> -
-        <span class="edit-link"><a href="{{ record.editlink() }}"><strong>{{ 'general.phrase.edit'|trans }}</strong></a></span> -
+        <span class="edit-link"><a href="{{ record.editlink() }}"><strong>{{ __('general.phrase.edit') }}</strong></a></span> -    
     {% endif %}
     {{ __('general.phrase.written-by-on', {
         '%name%': record.user.displayname|default(__('Unknown')),
@@ -15,11 +14,19 @@
         <a href="{{ record.link() }}">{{ __('general.phrase.permalink') }}</a> -
         {# include the 'default' links to taxonomies. Check the documentation for ways to modify and customize
            what is output to the browser: https://docs.bolt.cm/contenttypes/taxonomies#displaying-taxonomies-in-templates #}
-        {#{{ include('_sub_taxonomylinks.twig', { record: record }) }}#}
+        {{ include('partials/_sub_taxonomylinks.twig', { record: record }) }}
     </p>
 
-    {% set previous = false %} {# record.previous('id') #}
-    {% set next = false %} {# record.next('id') #}
+    {% set previous = record.previous('id') %}
+    {% set next = record.next('id') %}
+
+    <hr>
+    {{ dump(record) }}
+    <hr>
+    {{ dump(previous) }}
+    <hr>
+    {{ dump(next) }}
+
     {% if previous or next %}
         <p class="meta">
             {% if previous %}
