Fix Vue multiselect

--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -18,7 +18,7 @@
 {% block field %}
     {#<pre><code>{{ value|json_encode() }}</code></pre>#}
     <editor-select
-        :value="'{{ value|json_encode() }}'"
+        :value="{{ value|json_encode() }}"
         :name="'{{ name }}'"
         :id="'{{ id }}'"
         :options="{{ options|json_encode() }}"
