Refactor `fullName` to `displayName` for Users / Authors

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -24,7 +24,7 @@
 
     <!-- Admin Toolbar -->
     <nav id="toolbar" class="admin__toolbar">
-        {% set username = user.fullName|default('Unknown user') %}
+        {% set username = user.displayName|default('Unknown user') %}
         {% set labels = jsonlabels(['about.bolt_documentation', 'action.visit_site', 'action.create_new', ['general.greeting', {'%name%': username}], 'action.logout', 'action.edit_profile']) %}
         <admin-toolbar
             site-name="{% if config is defined %}{{ config.get('general/sitename') }}{% endif %}"
