--- a/templates/content/_fields_aside.html.twig
+++ b/templates/content/_fields_aside.html.twig
@@ -42,7 +42,7 @@
 {% include '@bolt/_partials/fields/text.html.twig' with {
     'label' : 'field.author' | trans,
     'name' : 'author',
-    'value' : record.author.fullName,
+    'value' : record.author.displayName,
     'disabled' : true
 } %}
 
