--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 
 {% block title %}
- {{ 'title.edit_user'|trans }} » <strong>{{ usertitle|default('Unknown') }}</strong>
+ {{ 'title.edit_user'|trans }} » <strong>{{ display_name|default('Unknown') }}</strong>
 {% endblock %}
 
 {% block body_id 'user_edit' %}
