--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -1,6 +1,6 @@
 {% if type != 'checkbox' %}
   <label for="{{ id }}">
-      {% if localise %}
+      {% if localize %}
         <i class="fas fa-language"></i>
       {% endif %}
       {{ label }}
