--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -4,6 +4,9 @@
 
     <hr>
     {{ dump() }}
+    {{ dump(app) }}
+    {{ dump(config) }}
+    {{ dump(record) }}
     <hr>
 
     {% if record is defined %}
@@ -26,7 +29,7 @@
     <hr>
     {% setcontent pages = "pages" %}
 
-    <ul>
+    <ul class="record_list">
     {% for page in pages %}
         <li><a href="{{ page.link }}">{{ page.title }}</a></li>
     {% endfor %}
