--- a/public/theme/skeleton/partials/_sub_fields.twig
+++ b/public/theme/skeleton/partials/_sub_fields.twig
@@ -24,7 +24,7 @@
     {%- spaceless %}
         {# Set up the array of fieldnames that should be iterated. We do this by looping
            over _all_ the fields, and skipping those in the 'omittedkeys' array. #}
-        {% set omittedkeys = [ 'id', 'slug', 'datecreated', 'datechanged', 'datepublish',
+        {% set omittedkeys = [ 'id', 'slug', 'image', 'datecreated', 'datechanged', 'datepublish',
         'datedepublish', 'username', 'status', 'ownerid', 'templatefields' ] %}
 
         {# Skip over the fields that are used in the slug, unless explicitly told not to,
