--- a/templates/content/_localeswitcher.html.twig
+++ b/templates/content/_localeswitcher.html.twig
@@ -10,7 +10,7 @@
             ></general-language>
 
             <a href="{{ path('bolt_content_edit_locales', {'id': record.id}) }}" class="btn btn-light btn-small">
-                See Localisation info
+                See Localization info
             </a>
 
         </div>
