--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -23,12 +23,9 @@
 
 {# Set the value #}
 {% if not value|default() %}
-    {% if field.value is defined and not field.isArray  %}
-        {% set value = field.value|join|default() %}
-    {% elseif field.value is defined  %}
-            {% set value = field.value|default([]) %}
-    {% else %}
-        {% set value = '' %}
+    {% set value = field.value|default('') %}
+    {% if value is iterable %}
+        {% set value = field.__toString() %}
     {% endif %}
 {% endif %}
 
