Content API Endpoint ad Behat tests

--- a/templates/_partials/_flash_messages.html.twig
+++ b/templates/_partials/_flash_messages.html.twig
@@ -8,6 +8,6 @@
              data-closing-label="close"
              data-duration="3000">
         </div>
-        {% dump(message) %}
+        {{ dump(message) }}
     {% endfor %}
 {% endfor %}
